--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <h1>hello</h1>
   </body>
-  <footer>This project was coded by Jem T and hosted on Github</footer>
+  <footer>
+    This project was coded by Jem T and hosted on
+    <a href="https://github.com/JemLBT/world-clock-project" target="_blank"
+      >Netlify ❤️</a
+    >
+  </footer>
   <script src="js.js"></script>
 </html>
