--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
     <title>World Clock - Jem T</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <div class="container"></div>
+    <h1>World Clock</h1>
+    <select>
+      <option value="">Select a city...</option>
+      <option value="">London</option>
+      <option value="">New York</option>
+      <option value="">Auckland</option>
+    </select>
+
+    <div class="city">
+      <h2>Los Angeles 🇺🇸</h2>
+      <div class="date">December 17th 2024</div>
+      <div class="time">16:59 PM</div>
+    </div>
   </body>
   <footer>
     This project was coded by Jem T and hosted on
