--- a/index.html
+++ b/index.html
@@ -7,23 +7,33 @@
     <title>World Clock - Jem T</title>
   </head>
   <body>
-    <div class="container"></div>
-    <h1>World Clock</h1>
-    <select>
-      <option value="">Select a city...</option>
-      <option value="">London</option>
-      <option value="">New York</option>
-      <option value="">Auckland</option>
-    </select>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
 
-    <div class="city">
-      <h2>Los Angeles 🇺🇸</h2>
-      <div class="date">December 17th 2024</div>
-      <div class="time">16:59 PM</div>
+      <div class="city">
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">December 17th 2024</div>
+        </div>
+        <div class="time">16:59:02 <small>PM</small></div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">December 17th 2024</div>
+        </div>
+        <div class="time">16:59:02 <small>PM</small></div>
+      </div>
     </div>
   </body>
-  <footer>
-    This project was coded by Jem T and hosted on
+  <footer class="footer">
+    This project was coded by <strong>Jem Thomas</strong> and hosted on
     <a href="https://github.com/JemLBT/world-clock-project" target="_blank"
       >Netlify ❤️</a
     >
