--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.js"></script>
     <title>World Clock - Jem T</title>
   </head>
   <body>
@@ -16,19 +19,19 @@
         <option value="">Auckland</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles 🇺🇸</h2>
           <div class="date">December 17th 2024</div>
         </div>
-        <div class="time">16:59:02 <small>PM</small></div>
+        <div class="time">16:59:02 <small>AM</small></div>
       </div>
-      <div class="city">
+      <div class="city" id="paris">
         <div>
-          <h2>Los Angeles 🇺🇸</h2>
+          <h2>Paris 🇺🇸</h2>
           <div class="date">December 17th 2024</div>
         </div>
-        <div class="time">16:59:02 <small>PM</small></div>
+        <div class="time">16:01:02 <small>AM</small></div>
       </div>
     </div>
   </body>
