updated with running seconds

--- a/index.html
+++ b/index.html
@@ -12,34 +12,38 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+      <select id="city">
         <option value="">Select a city...</option>
         <option value="">London</option>
         <option value="">New York</option>
         <option value="">Auckland</option>
       </select>
 
-      <div class="city" id="los-angeles">
+      <div id="cities">
+
+    <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">December 17th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">16:59:02 <small>AM</small></div>
+        <div class="time"></div>
+            
       </div>
       <div class="city" id="paris">
         <div>
           <h2>Paris 🇺🇸</h2>
-          <div class="date">December 17th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">16:01:02 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
-  </body>
   <footer class="footer">
     This project was coded by <strong>Jem Thomas</strong> and hosted on
     <a href="https://github.com/JemLBT/world-clock-project" target="_blank"
       >Netlify ❤️</a
     >
   </footer>
+   
   <script src="js.js"></script>
-</html>
+</body>
+</html> 
