updated correct flag country for paris

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="city" id="paris">
         <div>
-          <h2>Paris 🇺🇸</h2>
+          <h2>Paris 🇫🇷</h2>
           <div class="date"></div>
         </div>
         <div class="time"></div>
