--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
       <h1>World Clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Pacific/Auckland">Auckland</option>
+         <option value="Europe/Rome">Rome</option>
+                  <option value="Canada/Vancouver">Canada</option>
+
       </select>
 
       <div id="cities">
