Added current location, along with some additional countries

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
       <h1>World Clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
-        <option value="Europe/London">London</option>
-        <option value="America/New_York">New York</option>
-        <option value="Pacific/Auckland">Auckland</option>
-         <option value="Europe/Rome">Rome</option>
-                  <option value="Canada/Vancouver">Canada</option>
+        <option value="current">📍My Current Location</option>
+        <option value="Europe/London">💂🏽London</option>
+        <option value="America/New_York">🍏New York</option>
+        <option value="Pacific/Auckland">🥝Auckland</option>
+         <option value="Europe/Rome">🍕Rome</option>
+         <option value="Canada/Vancouver">🐻Canada</option>
 
       </select>
 
