Added final styling and tested, all working, ready to submit homework

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>World Clock - Jem T</title>
   </head>
+  
   <body>
+    
     <div class="container">
       <h1>World Clock</h1>
       <select id="city">
@@ -42,9 +48,9 @@
       </div>
     </div>
   <footer class="footer">
-    This project was coded by <strong>Jem Thomas</strong> and hosted on
+    This project was coded with ❤️ by <strong>Jem Thomas</strong> and hosted on
     <a href="https://github.com/JemLBT/world-clock-project" target="_blank"
-      >Netlify ❤️</a
+      >Netlify</a
     >
   </footer>
    
