Added link to home page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="time"></div>
       </div>
     </div>
+    <a href="https://adorable-vacherin-85ae36.netlify.app/" class="home">🏠 HOME </a>
   <footer class="footer">
     This project was coded with ❤️ by <strong>Jem Thomas</strong> and hosted on
     <a href="https://github.com/JemLBT/world-clock-project" target="_blank"
